--- a/hurumap_land/templates/profile/profile_detail.html
+++ b/hurumap_land/templates/profile/profile_detail.html
@@ -246,22 +246,58 @@
         {% endif %} <end if > -->
         {% if not landsalescolour_latest.landsalescolourtransactionpermonthbreakdown.is_missing %}
           <section class="clearfix stat-row">
-            <div class="column-full">
-              <div id="chart-grouped_column-landsalescolour_latest-landsalescolourtransactionpermonthbreakdown"
+            <h2>Number of transaction of colour in 12 months for Government Agriculture, Government Urban, Private and Others</h2>
+            <div class="column-half">
+              <div id="chart-grouped_column-landsalescolour_latest-landsalescolourtransactionpermonthbreakdowngu"
                    data-stat-type="number"
-                   data-chart-title="Number of transaction of colour in 12 months for Government Agriculture, Government Urban, Private and Others"
+                   data-source-title="AGRIDS, 2018"
+                   data-source-link="http://land.agrids.co.za/"></div>
+            </div>
+            <div class="column-half">
+              <div id="chart-grouped_column-landsalescolour_latest-landsalescolourtransactionpermonthbreakdownpr"
+                   data-stat-type="number"
+                   data-source-title="AGRIDS, 2018"
+                   data-source-link="http://land.agrids.co.za/"></div>
+            </div>
+            <div class="column-half">
+              <div id="chart-grouped_column-landsalescolour_latest-landsalescolourtransactionpermonthbreakdownot"
+                   data-stat-type="number"
+                   data-source-title="AGRIDS, 2018"
+                   data-source-link="http://land.agrids.co.za/"></div>
+            </div>
+            <div class="column-half">
+              <div id="chart-grouped_column-landsalescolour_latest-landsalescolourtransactionpermonthbreakdownga"
+                   data-stat-type="number"
                    data-source-title="AGRIDS, 2018"
                    data-source-link="http://land.agrids.co.za/"></div>
             </div>
           </section>
         {% endif %}
 
-        {% if not landsalescolour_latest.landsalescolourhectarespermonthbreakdown.is_missing %}
+        {% if not landsalescolour_latest.landsalescolourhectarespermonthbreakdowngu.is_missing %}
           <section class="clearfix stat-row">
-            <div class="column-full">
-              <div id="chart-grouped_column-landsalescolour_latest-landsalescolourhectarespermonthbreakdown"
+            <h2>Hectares(ha) traded for transaction of colour in 12 months for Government Agriculture, Government Urban, Private and Others</h2>
+            <div class="column-half">
+              <div id="chart-grouped_column-landsalescolour_latest-landsalescolourhectarespermonthbreakdowngu"
                    data-stat-type="number"
-                   data-chart-title="Hectares(ha) traded for transaction of colour in 12 months for Government Agriculture, Government Urban, Private and Others"
+                   data-source-title="AGRIDS, 2018"
+                   data-source-link="http://land.agrids.co.za/"></div>
+            </div>
+            <div class="column-half">
+              <div id="chart-grouped_column-landsalescolour_latest-landsalescolourhectarespermonthbreakdownpr"
+                   data-stat-type="number"
+                   data-source-title="AGRIDS, 2018"
+                   data-source-link="http://land.agrids.co.za/"></div>
+            </div>
+            <div class="column-half">
+              <div id="chart-grouped_column-landsalescolour_latest-landsalescolourhectarespermonthbreakdownot"
+                   data-stat-type="number"
+                   data-source-title="AGRIDS, 2018"
+                   data-source-link="http://land.agrids.co.za/"></div>
+            </div>
+            <div class="column-half">
+              <div id="chart-grouped_column-landsalescolour_latest-landsalescolourhectarespermonthbreakdownga"
+                   data-stat-type="number"
                    data-source-title="AGRIDS, 2018"
                    data-source-link="http://land.agrids.co.za/"></div>
             </div>
@@ -270,10 +306,28 @@
 
         {% if not landsalescolour_latest.landsalescolourcostpermonthbreakdown.is_missing %}
           <section class="clearfix stat-row">
-            <div class="column-full">
-              <div id="chart-grouped_column-landsalescolour_latest-landsalescolourcostpermonthbreakdown"
+            <h2>Total cost in (R million) for transaction of colour in 12 months for Government Agriculture, Government Urban, Private and Others</h2>
+            <div class="column-half">
+              <div id="chart-grouped_column-landsalescolour_latest-landsalescolourcostpermonthbreakdowngu"
                    data-stat-type="number"
-                   data-chart-title="Total cost in (R million) for transaction of colour in 12 months for Government Agriculture, Government Urban, Private and Others"
+                   data-source-title="AGRIDS, 2019"
+                   data-source-link="http://land.agrids.co.za/"></div>
+            </div>
+            <div class="column-half">
+              <div id="chart-grouped_column-landsalescolour_latest-landsalescolourcostpermonthbreakdownpr"
+                   data-stat-type="number"
+                   data-source-title="AGRIDS, 2019"
+                   data-source-link="http://land.agrids.co.za/"></div>
+            </div>
+            <div class="column-half">
+              <div id="chart-grouped_column-landsalescolour_latest-landsalescolourcostpermonthbreakdownot"
+                   data-stat-type="number"
+                   data-source-title="AGRIDS, 2019"
+                   data-source-link="http://land.agrids.co.za/"></div>
+            </div>
+            <div class="column-half">
+              <div id="chart-grouped_column-landsalescolour_latest-landsalescolourcostpermonthbreakdownga"
+                   data-stat-type="number"
                    data-source-title="AGRIDS, 2019"
                    data-source-link="http://land.agrids.co.za/"></div>
             </div>
