--- a/hurumap_zw/templates/profile/profile_detail.html
+++ b/hurumap_zw/templates/profile/profile_detail.html
@@ -1,23 +1,46 @@
 {% extends 'profile/profile_detail.html' %} {% load humanize lookup staticfiles %}
 
-{% block header_content %}
-  {{ block.super }}
+{% block secondary_nav %}
+  <div class="floating-nav-wrapper" id="sticky-nav">
+    <nav class="floating-nav affix-top" data-spy="affix" data-offset-top="197">
+      <div class="wrapper clearfix">
+        <div class="geography-ico">
+                    <span><img
+                        src="{% static 'img/icons/favicon.ico' %}">{{ geography.this.name }}
+                    </span>
+        </div>
+        <ul>
+          <li><a href="#demographics"><i class="fa fa-user"></i>
+            <span>Demographics</span></a></li>
+          {% if not afrobarometer.is_missing %}
+            <li><a href="#afrobarometer"><i class="fa fa-signal"></i>
+              <span>Afrobarometer</span></a>
+            </li>
+          {% endif %}
+        </ul>
+      </div>
+    </nav>
+  </div>
+
 {% endblock %}
 
+
 {% block profile_header_tail %}
-<div class="column-full">
+  <div class="column-full">
     <strong>{{ primary_releases.active.name }} {{ primary_releases.active.year }}</strong>
     {% if primary_releases.other %}
-    <div class="tool-group toggle-sub-group release-list">
+      <div class="tool-group toggle-sub-group release-list">
         <a>Change release<i class="fa fa-chevron-circle-down"></i></a>
         <ul class="sub-group" style="display: none;">
-        {% for release in primary_releases.other %}
-            <li><a href="{{ request.path }}?release={{release.year}}">{{ release.name }} {{ release.year }}</a></li>
-        {% endfor %}
+          {% for release in primary_releases.other %}
+            <li>
+              <a href="{{ request.path }}?release={{ release.year }}">{{ release.name }} {{ release.year }}</a>
+            </li>
+          {% endfor %}
         </ul>
-    </div>
+      </div>
     {% endif %}
-</div>
+  </div>
 {% endblock %}
 
 {% block profile_detail %}
@@ -48,7 +71,7 @@
     </article>
   {% endif %}
   {% if not afrobarometer.is_missing %}
-    <article>
+    <article id="afrobarometer">
       <header class="section-contents"><h1>Afrobarometer Round 7</h1></header>
       <div class="section-container">
         <section class="clearfix stat-row">
@@ -200,7 +223,7 @@
             <div id="chart-pie-afrobarometer-corruption_president_office" data-stat-type="percentage" data-chart-title="Q53a.Corruption: President Office" data-source-link="http://afrobarometer.org/data/merged-round-6-data-36-countries-2016" data-source-title="Afrobarometer Round 6: Survey, 2017"></div>
           </div>
           <div class="column-half">
-            <div id="chart-pie-afrobarometer-satisfaction_with_democracy" data-stat-type="percentage" data-chart-title="Q41.Satisfaction with democracy" data-source-link="http://afrobarometer.org/data/merged-round-6-data-36-countries-2016" data-source-title="Afrobarometer Round 6: Survey, 2017"></div>
+            <div id="chart-pie-afrobarometer-satisfaction_with_democracy" data-stat-type="percentage" data-chart-title="Satisfaction with democracy" data-source-link="http://afrobarometer.org/data/merged-round-6-data-36-countries-2016" data-source-title="Afrobarometer Round 6: Survey, 2017"></div>
           </div>
         </section>
         <section class="clearfix stat-row">
