fix place search and comparison

--- a/elimu_yangu/leaguetable/templates/leaguetable/profile/head2head.html
+++ b/elimu_yangu/leaguetable/templates/leaguetable/profile/head2head.html
@@ -60,8 +60,8 @@
 {% block content_container %}
 
 <div class="head2head-wrapper">
-    <iframe class="frame-left" scrolling="no" src="{% url 'geography_detail' geography_id=geo_id1 %}"></iframe>
-    <iframe class="frame-right" scrolling="no" src="{% url 'geography_detail' geography_id=geo_id2 %}"></iframe>
+    <iframe class="frame-left" scrolling="no" src="{% url 'league_table_geography_detail' geography_id=geo_id1 %}"></iframe>
+    <iframe class="frame-right" scrolling="no" src="{% url 'league_table_geography_detail' geography_id=geo_id2 %}"></iframe>
 
     <div class="clear"></div>
 </div>
