replace cft logo with cfa logo

--- a/elimu_yangu/templates/footer.html
+++ b/elimu_yangu/templates/footer.html
@@ -45,8 +45,8 @@
               </ul>
 
               <div style="padding-top: 10px;">
-                <a href="https://codefortanzania.org/" target="_blank" rel="noopener">
-                  <img class="img-fluid img-thumbnail" src="{% static 'img/logos/cftanzania-white.png' %}" />
+                <a href="https://codeforafrica.org/" target="_blank" rel="noopener">
+                  <img class="img-fluid img-thumbnail" src="{% static 'img/logos/cfafrica-white.png' %}" />
                 </a>
               </div>
 
