--- a/hurumap_tz/templates/profile/profile_detail.html
+++ b/hurumap_tz/templates/profile/profile_detail.html
@@ -1,4 +1,4 @@
-{% extends 'profile/profile_detail.html' %}
+{% extends 'profile/profile_detail.html' %}{% load humanize lookup staticfiles %}
 
 {% block secondary_nav %}
   <div class="floating-nav-wrapper" id="sticky-nav">
