[ElimuYangu] Bug Fixes (#136)
* fix place search and comparison

* remove django session on middleware

* add whitenoise and static

* replace cft logo with cfa logo

* rename lib to libs

* import static on urls file

* added template context processor and organised middleware

* remove unused import

* remove get_current_language as sw

* fix whitenoise error, remove unfound file

* fix whitenoise error, remove unfound file

* remove ward

* Update site js. Replace append with html div

* edit template settings to new format

--- a/elimu_yangu/templates/homepage_country.html
+++ b/elimu_yangu/templates/homepage_country.html
@@ -19,7 +19,7 @@
    <!-- Jquery nice select -->
 <link rel="stylesheet" href="{% static 'lib/jquery.nice-select/css/nice-select.css' %}">
 
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/lib/jquery/3.2.1/jquery.min.js"></script>
 {% endblock %}
 
 {% block header %}
